--- a/style.css
+++ b/style.css
@@ -1,6 +1,23 @@
+body {
+  font-family: sans-serif;
+}
+
 #gradient {
   width: 500px;
   height: 500px;
   border-radius: 25px;
   background-image: linear-gradient(45deg, red, blue);
+}
+
+#gradient_form {
+  position: absolute;
+  right: 10%;
+  top: 10%;
+  width: 250px;
+  height: auto;
+  border: 1px solid red;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
