--- a/style.css
+++ b/style.css
@@ -3,12 +3,36 @@ body {
   text-align: center
 }
 
+.sidenav {
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: white;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+}
+
+.container {
+  margin-left: 250px;
+  width: auto;
+}
+
 #gradient {
-  margin: auto;
-  width: 75%;
   height: 250px;
   border-radius: 25px;
   background-image: linear-gradient(45deg, red, blue);
+  margin-bottom: 1em;
 }
 
 #gradient_form {
