--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   text-align: center
 }
 
+/*
 .sidenav {
   height: 100%;
   width: 250px;
@@ -22,9 +23,10 @@ body {
   color: #818181;
   display: block;
 }
+*/
 
 .container {
-  margin-left: 250px;
+  /*margin-left: 250px;*/
   width: auto;
 }
 
@@ -49,4 +51,8 @@ body {
   background-color: #f7f8f9;
   color: black;
   font-family: Source Code Pro, monospace;
+}
+
+.fa-clipboard-check {
+  font-size: 2em;
 }
