--- a/style.css
+++ b/style.css
@@ -28,7 +28,10 @@ body {
   width: 25px;
   height: 25px;
   border-radius: 2.5px;
-  background-image: linear-gradient( 135deg, #FFD3A5 10%, #FD6585 100%);
+}
+
+.gradient-peach {
+  background-image: linear-gradient( 135deg, #FFD3A5, #FD6585);
 }
 
 .container {
