--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 #gradient {
   height: 250px;
   border-radius: 25px;
-  background-image: linear-gradient(45deg, red, blue);
+  /*background-image: linear-gradient(45deg, red, blue);*/
   margin-bottom: 1em;
 }
 
