--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ body {
   display: block;
 }
 
+.preset-gradient-menu-item {
+  border: 1px solid red;
+}
+
 .preset-gradient-menu-item .gradient-preview {
   display: inline-block;
   width: 25px;
@@ -31,7 +35,7 @@ body {
 }
 
 .gradient-peach {
-  background-image: linear-gradient( 135deg, #FFD3A5, #FD6585);
+  background-image: linear-gradient(135deg, #FFD3A5, #FD6585);
 }
 
 .container {
@@ -42,7 +46,6 @@ body {
 #gradient {
   height: 250px;
   border-radius: 25px;
-  /*background-image: linear-gradient(45deg, red, blue);*/
   margin-bottom: 1em;
 }
 
