--- a/style.css
+++ b/style.css
@@ -38,6 +38,14 @@ body {
   background-image: linear-gradient(135deg, #FFD3A5, #FD6585);
 }
 
+.gradient-misty-morning {
+  background-image: linear-gradient(135deg, #C2FFD8, #465EFB);
+}
+
+.gradient-limeaid {
+  background-image: linear-gradient(135deg, #FFF720, #3CD500);
+}
+
 .container {
   margin-left: 250px;
   width: auto;
