--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: center
+}
+
+h1 {
+  color: midnightblue;
 }
 
 .sidenav {
@@ -10,21 +14,34 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: white;
+  background-color: midnightblue;
+  color: white;
   overflow-x: hidden;
   padding-top: 20px;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+  /*text-shadow: 2px 2px 0px rgba(0,0,0,0.4);*/
+}
+
+.sidenav .preset-gradient-menu-item {
+  text-align: left;
+  margin-left: 25px;
+  width: 200px;
+}
+
+.sidenav .preset-gradient-menu-item button {
+  float: right;
 }
 
 .sidenav a, p {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: white;
   display: block;
 }
 
 .preset-gradient-menu-item {
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 
 .preset-gradient-menu-item .gradient-preview {
@@ -87,22 +104,53 @@ body {
   margin-bottom: 1em;
 }
 
-#gradient_form {
+.gradient_form {
   position: relative;
   margin: auto;
-  width: 250px;
+  width: 200px;
   height: auto;
-  border: 1px solid red;
+  background-color: darkgray;
+  color: white;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.gradient_form label{
+    display: inline-block;
+    float: left;
+    clear: left;
+    width: 150px;
+    text-align: left;
+}
+
+.gradient_form input {
+  display: inline-block;
+  float: left;
+}
+
+.gradient_form button {
+  margin-top: 1em;
 }
 
 .css-code-container {
-  width: auto;
-  border-radius: 5px;
+  width: 50%;
+  border-radius: 7px;
+  margin: auto;
   background-color: #f7f8f9;
   color: black;
   font-family: Source Code Pro, monospace;
 }
 
 .fa-clipboard-check {
-  font-size: 2em;
+  font-size: 1.5em;
+}
+
+@media only screen and (max-width: 600px) {
+  .sidenav {
+    display: none;
+  }
+
+  .container {
+    margin-left: 0;
+  }
 }
